--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.14.1",
     "bower": "^1.6.5",
     "braintree": "^1.36.0",
+    "braintree-web": "^2.21.0",
     "browserify": "^12.0.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
