--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browserify": "^12.0.1",
     "colors": "^1.1.2",
     "compression": "^1.6.0",
+    "dotenv": "^2.0.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
